Fix input overflow issue and deleted some html contents

--- a/style.css
+++ b/style.css
@@ -473,8 +473,19 @@ footer {
     border-radius: 4px;
     width: 100%;
     height: 50px;
-    padding-right: 15px 20px; 
+    padding: 0 20px; 
+    box-sizing: border-box;
     -webkit-text-fill-color: hsl(229, 31%, 21%);
+}
+
+.footer-btn {
+    background: hsl(0, 94%, 66%);
+    border: none;
+    padding: 15px 20px;
+    border-radius: 4px;
+    color: hsl(0, 0%, 97%);
+    font-weight: 500;
+    width: 100%;
 }
 
 .footer-input input::placeholder {
@@ -507,17 +518,6 @@ footer {
     margin-top: -2px;
     border-radius: 4px;
     width: 100%;
-}
-
-.footer-btn {
-    background: hsl(0, 94%, 66%);
-    border: none;
-    padding: 15px 20px;
-    border-radius: 4px;
-    color: hsl(0, 0%, 97%);
-    font-weight: 500;
-    width: 100%;
-    max-width: 400px;
 }
 
 .footer-btn:active {
